# mdr32f9q2i_lvgl_12864lcd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  flash.sh  linker.ld  startup.S
src/: main.c
src/bsp/: bsp.c  bsp.h  rcc.c  rcc.h
src/bsp/cmsis/inc/: K1986VE9xI.h  core_cm3.h  core_cmFunc.h  core_cmInstr.h
src/bsp/cmsis/src/: system_K1986VE9xI.c
src/bsp/cmsis/src/arm/: startup_MDR32F9Q2I.S
src/bsp/cmsis/src/iar/: startup_MDR32F9Q2I.S
src/bsp/spl/: MDR32FxQI_config.h
src/bsp/spl/inc/: MDR32FxQI_adc.h  MDR32FxQI_arinc429r.h  MDR32FxQI_arinc429t.h  MDR32FxQI_audio.h  MDR32FxQI_bkp.h  MDR32FxQI_can.h  MDR32FxQI_comp.h  MDR32FxQI_dac.h  MDR32FxQI_dma.h  MDR32FxQI_dsp.h  MDR32FxQI_ebc.h  MDR32FxQI_eeprom.h  MDR32FxQI_eth.h  MDR32FxQI_i2c.h  MDR32FxQI_iwdg.h  MDR32FxQI_mil_std_1553.h  MDR32FxQI_port.h  MDR32FxQI_power.h  MDR32FxQI_rst_clk.h  MDR32FxQI_sdio.h  MDR32FxQI_ssp.h  MDR32FxQI_timer.h  MDR32FxQI_uart.h  MDR32FxQI_usb.h  MDR32FxQI_utils.h  MDR32FxQI_wwdg.h
src/bsp/spl/inc/IRQ_Handler_Template/: K1986VE1xI_IT.h  K1986VE9xI_IT.h  MDR32F1QI_IT.h  MDR32F9Q2I_IT.h  MDR32FG16S1QI_IT.h
src/bsp/spl/inc/USB_Library/: MDR32FxQI_usb_CDC.h  MDR32FxQI_usb_default_handlers.h  MDR32FxQI_usb_device.h  MDR32FxQI_usb_handlers.h
src/bsp/spl/src/: MDR32FxQI_adc.c  MDR32FxQI_arinc429r.c  MDR32FxQI_arinc429t.c  MDR32FxQI_asm.S  MDR32FxQI_audio.c  MDR32FxQI_bkp.c  MDR32FxQI_can.c  MDR32FxQI_comp.c  MDR32FxQI_dac.c  MDR32FxQI_dma.c  MDR32FxQI_dsp.c  MDR32FxQI_ebc.c  MDR32FxQI_eeprom.c  MDR32FxQI_eth.c  MDR32FxQI_i2c.c  MDR32FxQI_iwdg.c  MDR32FxQI_mil_std_1553.c  MDR32FxQI_port.c  MDR32FxQI_power.c  MDR32FxQI_rst_clk.c  MDR32FxQI_sdio.c  MDR32FxQI_ssp.c  MDR32FxQI_timer.c  MDR32FxQI_uart.c  MDR32FxQI_usb.c  MDR32FxQI_utils.c  MDR32FxQI_wwdg.c
src/bsp/spl/src/IRQ_Handler_Template/: K1986VE1xI_IT.c  K1986VE9xI_IT.c  MDR32F1QI_IT.c  MDR32F9Q2I_IT.c  MDR32FG16S1QI_IT.c
src/bsp/spl/src/USB_Library/: MDR32FxQI_usb_CDC.c  MDR32FxQI_usb_device.c
src/drivers/gpio/: gpio.c  gpio.h
src/drivers/lcd/: CMakeLists.txt  lcd.c  lcd.h
src/drivers/led/: led.c  led.h
src/modules/lcd_controller/: CMakeLists.txt  lcd_controller.c  lcd_controller.h
src/modules/led_controller/: CMakeLists.txt  led_controller.c  led_controller.h
src/rtos/: rtos.c  rtos.h
src/sys/: FreeRTOSConfig.h  irq.c  irq.h
